# distd

./: .gitignore  Cargo.toml  ClientSettings.json  ClientSettings.toml  README.md
client/: Cargo.toml
client/src/: client.rs  connection.rs  error.rs  grpc.rs  main.rs  persistence.rs  server.rs  settings.rs
client/src/server/: mod.rs
core/: Cargo.toml  build.rs
core/proto/: distd.proto
core/src/: chunk_storage.rs  chunks.rs  error.rs  feed.rs  hash.rs  identity.rs  item.rs  lib.rs  metadata.rs  msgpack.rs  net.rs  peer.rs  unique_name.rs  utils.rs  version.rs
core/src/benchmarks/: vec.rs
core/src/chunk_storage/: fs_storage.rs  hashmap_storage.rs  node.rs  node_stream.rs  redb.rs  stored_chunk_ref.rs
core/src/utils/: grpc.rs  path.rs  serde.rs  settings.rs  stream.rs  testing.rs  uuid.rs
core/src/utils/serde/: bitcode.rs  msgpack.rs
core/tests/: blake3.rs
server/: Cargo.toml
server/src/: client.rs  error.rs  grpc.rs  main.rs  realm.rs  rest_api.rs  server.rs  utils.rs
server/src/utils/: serde.rs  url_part_utf8_string.rs
