[workspace]
members = ["core", "server", "client"]
#members = ["core", "server", "client", "ppspp-rs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [""]
description = ""
documentation = "https://example.com/bar"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = 0 }
missing_errors_doc = { level = "allow", priority = 1 }

[workspace.dependencies]
tokio = { version = "1.39.2", features = ["full"] }
axum = { version = "0.7.5", features = ["json", "multipart"] }
axum-extra = { version = "0.9.3", features = ["query"] }
tower-http = { version = "0.5.2", features = ["trace"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

anyhow = { version = "1.0", default-features = false }
thiserror = "1.0"

tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.16" }
test-log = { version = "0.2" }
clap = { version = "4", features = ["derive"] }
config = { version = "0.14.0", features = ["toml"] }

rustls = { version = "0.23.5", default-features = false, features = ["ring", "std"] }
ring = "0.17"
blake3 = "1.5.3"

serde = { version = "1.0", features = ["derive", "rc"] }
bytes = { version = "1.7.0" }
bitcode = { version = "0", features = ["derive", "serde"], default-features = false }
uuid = { version = "1.10.0", features = [ "v4", "v5", "fast-rng", "macro-diagnostics" ] }
percent-encoding = "2.3.1"
base64 = { version = "0.22.1" }
