[workspace]
members = ["core", "server", "client"]
#members = ["core", "server", "client", "ppspp-rs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [""]
description = ""
documentation = "https://example.com/bar"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = 0 }
missing_errors_doc = { level = "allow", priority = 1 }

[workspace.dependencies]
http = { version = "*" }
tonic = "0.12.3"
tonic-build = "0.12"
prost = "0.13"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-stream = "0.1.16"

thiserror = "1.0"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.16" }
test-log = { version = "0.2", default-features = false, features = ["trace"] }
clap = { version = "4", features = ["derive"] }
config = { version = "0.14.0", default-features = false, features = ["json"] }
dirs = { version = "5.0" }

rustls = { version = "0.23.5", default-features = false, features = ["ring", "std"] }
ring = "0.17"
blake3 = "1.5.3"

serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
bytes = { version = "1.7.0" }
bitcode = { version = "0", features = ["derive", "serde"], default-features = false }
uuid = { version = "1.10.0", features = [ "v4", "v5", "fast-rng", "macro-diagnostics" ] }
percent-encoding = "2.3.1"
base64 = { version = "0.22.1" }

redb = { version = "2.2.0" }

[profile.release]
#opt-level = 's'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
