[package]
name = "distd_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
config = { workspace = true }

rustls = { workspace = true }
ring = { workspace = true }
blake3 = { workspace = true }

serde = { workspace = true }
uuid = { workspace = true }
percent-encoding = { workspace = true }
bitcode = { workspace = true }

distd_core = { path = "../core" }

[dev-dependencies]
test-log = { workspace = true }
