[package]
name = "distd_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lints]
workspace = true

[dependencies]
http = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }

rustls = { workspace = true }
ring = { workspace = true }
blake3 = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
percent-encoding = { workspace = true }
bitcode = { workspace = true }

distd_core = { path = "../core" }

[dev-dependencies]
test-log = { workspace = true }
