[package]
name = "distd_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
tokio = { workspace = true }
utp = { workspace = true }

config = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

bytes = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
