[package]
name = "distd_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
tokio = { workspace = true }

config = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

blake3 = { workspace = true }
ring = { workspace = true }

bytes = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
base64 = { workspace = true }

ptree = { workspace = true }
