[package]
name = "distd_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lints]
workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }

tracing = { workspace = true }
thiserror = { workspace = true }

blake3 = { workspace = true }
ring = { workspace = true }

bytes = { workspace = true }
serde = { workspace = true }
bitcode = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
rand = { version = "0.8.5" }
test-log = { workspace = true }
