[package]
name = "distd_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = "0.3.16"
clap = { workspace = true }
config = { workspace = true }

rustls = { workspace = true }
ring = { workspace = true }
blake3 = { workspace = true }

serde = { workspace = true }
bitcode = { workspace = true }
uuid = { workspace = true }
percent-encoding = { workspace = true }

distd_core = { path = "../core" }
