[package]
name = "distd_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lints]
workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

axum = { version = "0.7.5", features = ["json", "multipart", "http2"] }
#axum-extra = { version = "0.9.3", features = ["query"] }
tower-http = { version = "0.5.2", features = ["trace"] }

thiserror = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
test-log = { workspace = true }
clap = { workspace = true }
config = { workspace = true }

rustls = { workspace = true }
ring = { workspace = true }
blake3 = { workspace = true }

serde = { workspace = true }
bitcode = { workspace = true }
uuid = { workspace = true }
percent-encoding = { workspace = true }

distd_core = { path = "../core" }

[features]
default = ["redb"]
redb = ["distd_core/redb"]
